# ROS_first_proj

dog_ws/devel/: .catkin  .rosinstall
dog_ws/devel/include/puppy/: HumanActionsRequest.h  HumanActionsResponse.h
dog_ws/devel/lib/pkgconfig/: puppy.pc
dog_ws/devel/share/common-lisp/ros/puppy/msg/: _package.lisp  _package_PuppyHealth.lisp  puppy-msg.asd
dog_ws/devel/share/common-lisp/ros/puppy/srv/: _package.lisp  _package_HumanActions.lisp  puppy-srv.asd
dog_ws/devel/share/gennodejs/ros/puppy/msg/: _index.js
dog_ws/devel/share/gennodejs/ros/puppy/srv/: _index.js
dog_ws/devel/share/puppy/cmake/: puppy-msg-paths.cmake  puppyConfig.cmake
dog_ws/src/puppy/: CMakeLists.txt  package.xml
dog_ws/src/puppy/msg/: PuppyHealth.msg
dog_ws/src/puppy/src/: HealthMonitor.cpp  HealthPub.cpp  HumanActionSimClient.cpp  HumanActionSimServer.cpp
dog_ws/src/puppy/srv/: HumanActions.srv
